replaced our culture and chris paul images with optimized versions

--- a/public/css/cultureSection.desktop.css
+++ b/public/css/cultureSection.desktop.css
@@ -5,7 +5,7 @@
   width: 17% !important;
 }
 .translationllc__main__culture__culture-mission {
-  background-image: url(../assets/ourculture.jpg);
+  background-image: url(../assets/translation-desktop-NYC.jpg);
 }
 .translationllc__main__culture__emcee__moniker {
   font-size: 74px;
