--- a/public/css/video.desktop.css
+++ b/public/css/video.desktop.css
@@ -80,7 +80,7 @@
   background-image: url(../assets/mia-desktop.jpg);
 }
 .translationllc__video__container--work-video--six {
-  background-image: url(../assets/StateFarm_ChrisPaul_desktop.jpg);
+  background-image: url(../assets/paul-web.jpg);
 }
 .translationllc__video__container--work-video--seven {
   background-image: url(../assets/BrooklynNets_desktop.jpg);
