--- a/public/css/video.mobile.css
+++ b/public/css/video.mobile.css
@@ -39,7 +39,7 @@
   background-image: url(../assets/mia-mobile.jpg);
 }
 .translationllc__video__container--work-video--six {
-  background-image: url(../assets/StateFarm_ChrisPaul_mobile.jpg);
+  background-image: url(../assets/paul-mobile.jpg);
 }
 .translationllc__video__container--work-video--seven {
   background-image: url(../assets/BrooklynNets_mobile.jpg);
