--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -15,11 +15,26 @@
 </main>
 <main id="translationllcMain" class="translationllc__main" style="opacity: 0">
   <section id="introSection" class="translationllc__main__intro">
-    <div id="backgroundParallaxOne" class="backgroundParallaxOne preserveAspectRatio">
+    <div style="display: none" id="backgroundParallaxOne" class="backgroundParallaxOne preserveAspectRatio">
       <div id="translationllcWeAreCulturalCatalysts" class="translationllc__main__intro__we-are preserveAspectRatio">
         <div id="translationllcCulturalCatalysts" class="translationllc__main__intro__we-are-translation preserveAspectRatio landscapePreserveAspectRatio">
         </div>
       </div>
+    </div>
+    <div style="border-bottom: 1px solid red;" class="translationllc__section-icon preserveAspectRatio">
+      <p class="translationllc__section-icon__copy">
+        LOGO CULTURAL CATALYSTS
+      </p>
+    </div>
+    <div style="border-bottom: 1px solid red;" class="translationllc__section-icon preserveAspectRatio">
+      <p class="translationllc__section-icon__copy">
+        QUOTE ABOUT COMPANY
+      </p>
+    </div>
+    <div style="border-bottom: 1px solid red;" class="translationllc__section-icon preserveAspectRatio">
+      <p class="translationllc__section-icon__copy">
+        ABOUT COMPANY
+      </p>
     </div>
     <tllcvideo class="translationllc__featured-video preserveAspectRatioElement gradientParallax" id="featuredVideo">
       <figure class="translationllc__video__container--intro preserveAspectRatio">
@@ -41,13 +56,14 @@
       <!-- <button class="translationllc__video__play-button" id="featuredVideo" type="button" name="button">
       </button> -->
     </tllcvideo>
-    <div class="translationllc__section-icon preserveAspectRatio">
+    <div style="border-bottom: 1px solid red;" class="translationllc__section-icon preserveAspectRatio">
       <div class="translationllc__section-icon__copy">
         <p class="tllc__margin-bottom">
-          Trends are perishable, cool is forever.
+          NEWS ICON
+          <!-- Trends are perishable, cool is forever.
           Seeing how culture can propel brands forward in ways that advertising alone could never do,
           we set out to build a company uniquely suited to help brands thrive in contemporary times.
-          We know that brands that lead culture will be more successful than brands&nbsp;that&nbsp;follow.
+          We know that brands that lead culture will be more successful than brands&nbsp;that&nbsp;follow. -->
         </p>
       </div>
     </div>
