removed stoutisms and placeholder elements

--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -21,21 +21,6 @@
         </div>
       </div>
     </div>
-    <div style="border-bottom: 1px solid red;" class="translationllc__section-icon preserveAspectRatio">
-      <p class="translationllc__section-icon__copy">
-        LOGO CULTURAL CATALYSTS
-      </p>
-    </div>
-    <div style="border-bottom: 1px solid red;" class="translationllc__section-icon preserveAspectRatio">
-      <p class="translationllc__section-icon__copy">
-        QUOTE ABOUT COMPANY
-      </p>
-    </div>
-    <div style="border-bottom: 1px solid red;" class="translationllc__section-icon preserveAspectRatio">
-      <p class="translationllc__section-icon__copy">
-        ABOUT COMPANY
-      </p>
-    </div>
     <tllcvideo class="translationllc__featured-video preserveAspectRatioElement gradientParallax" id="featuredVideo">
       <figure class="translationllc__video__container--intro preserveAspectRatio">
         <!-- <video preload="none" type="video/mp4" class="translationllc__video__container__videointro preserveAspectRatio" id="featuredVideo" src="http://www.translationllc.com/assets/films/our-reel.mp4">
@@ -56,23 +41,12 @@
       <!-- <button class="translationllc__video__play-button" id="featuredVideo" type="button" name="button">
       </button> -->
     </tllcvideo>
-    <div style="border-bottom: 1px solid red;" class="translationllc__section-icon preserveAspectRatio">
-      <div class="translationllc__section-icon__copy">
-        <p class="tllc__margin-bottom">
-          NEWS ICON
-          <!-- Trends are perishable, cool is forever.
-          Seeing how culture can propel brands forward in ways that advertising alone could never do,
-          we set out to build a company uniquely suited to help brands thrive in contemporary times.
-          We know that brands that lead culture will be more successful than brands&nbsp;that&nbsp;follow. -->
-        </p>
-      </div>
-    </div>
-    <div id="stoutismIntroTwo" class="gradientParallax preserveAspectRatio">
+    <!-- <div id="stoutismIntroTwo" class="gradientParallax preserveAspectRatio">
       <img src="../assets/GRADIENT[1].jpg" class="translationllc__stoutism" />
       <div class="translationllc__main__intro__stoutism__words-two translationllc__stoutism-words">
         <p class="translationllc__stoutism-attribution">- Lead, don't follow. Stay five steps ahead.</p>
       </div>
-    </div>
+    </div> -->
     <div class="translationllc__main__articles">
       <div class="translationllc__main__articles__article--news">
         <h3 class="translationllc__main__articles__news">NEWS</h3>
@@ -115,12 +89,12 @@
         </div>
       </div>
     </div>
-    <div id="stoutismWork" class="gradientParallax preserveAspectRatio">
+    <!-- <div id="stoutismWork" class="gradientParallax preserveAspectRatio">
       <img src="../assets/Translation_MobileSite_1334x750_Gradient_3.png" class="translationllc__stoutism" />
       <div class="translationllc__main__work__stoutism__words translationllc__stoutism-words">
         <p class="translationllc__stoutism-attribution">- Nuf said.</p>
       </div>
-    </div>
+    </div> -->
   </section>
   <section id="workSection" class="translationllc__main__work">
     <div class="translationllc__main__culture__section-icon translationllc__section-icon preserveAspectRatio">
@@ -259,12 +233,12 @@
         By building a Champs store inside former employee DJ Khaled’s home, this campaign breathed life into their tagline "We Know Game."
       </p>
     </div>
-    <div id="stoutismIntro" class="gradientParallax preserveAspectRatio">
+    <!-- <div id="stoutismIntro" class="gradientParallax preserveAspectRatio">
       <img src="../assets/Translation_MobileSite_1334x750_Gradient_1.png" class="translationllc__stoutism" />
       <div class="translationllc__main__intro__stoutism__words translationllc__stoutism-words">
         <p class="translationllc__stoutism-attribution">- Don't lose focus when making ground-breaking work.</p>
       </div>
-    </div>
+    </div> -->
   </section>
   <section id="cultureSection">
     <div class="translationllc__main__culture__section-icon translationllc__section-icon preserveAspectRatio">
@@ -287,20 +261,12 @@
         spill over into the boardroom.
       </p>
     </div>
-    <div id="stoutismCulture" class="gradientParallax preserveAspectRatio">
+    <!-- <div id="stoutismCulture" class="gradientParallax preserveAspectRatio">
       <img src="../assets/Translation_MobileSite_1334x750_Gradient_4.png" class="translationllc__stoutism" />
       <div class="translationllc__main__culture__stoutism__words translationllc__stoutism-words translationllc__stoutism-words--tall-quote">
         <p class="translationllc__stoutism-attribution translationllc__stoutism-attribution--tall-quote">- This old proverb from Zimbabwe reminds us to never settle. Let’s raise the bar together.</p>
-        <!-- <div class="translationllc__stoutism-words--html__margin-bottom">
-          <h3>IF YOU CAN TALK</h3>
-          <h3>YOU CAN SING</h3>
-        </div>
-        <div>
-          <h3>IF YOU CAN WALK</h3>
-          <h3>YOU CAN DANCE</h3>
-        </div> -->
       </div>
-    </div>
+    </div> -->
   </section>
   <section class="translationllc__contact-us" id="contactUs">
     <h2 class="translationllc__contact-us__header">STAY IN TOUCH</h2>
