removed stoutisms and placeholder elements

--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -300,6 +300,6 @@
     </div>
     <p class="translationllc__contact-us__copyright">Ⓒ2017 Translation. All Rights Reserved.</p>
   </section>
-  <button style="display: none" id="requestFullscreenButton" type="button" name="button"></button>
+  <button style="display: none" id="requestFullscreenButton" type="button" name="button">Request full screen</button>
 </main>
 {{> homepageScripts}}
