--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -15,80 +15,54 @@
 </main>
 <main id="translationllcMain" class="translationllc__main" style="opacity: 0">
   <section id="introSection" class="translationllc__main__intro">
-    <div style="display: none" id="backgroundParallaxOne" class="backgroundParallaxOne preserveAspectRatio">
+    <div id="backgroundParallaxOne" class="backgroundParallaxOne preserveAspectRatio">
       <div id="translationllcWeAreCulturalCatalysts" class="translationllc__main__intro__we-are preserveAspectRatio">
         <div id="translationllcCulturalCatalysts" class="translationllc__main__intro__we-are-translation preserveAspectRatio landscapePreserveAspectRatio">
         </div>
       </div>
     </div>
-    <tllcvideo class="translationllc__featured-video preserveAspectRatioElement gradientParallax" id="featuredVideo">
-      <figure class="translationllc__video__container--intro preserveAspectRatio">
+    <figure class="translationllc__video__container--intro preserveAspectRatio">
         <!-- <video preload="none" type="video/mp4" class="translationllc__video__container__videointro preserveAspectRatio" id="featuredVideo" src="http://www.translationllc.com/assets/films/our-reel.mp4">
         </video> -->
-        <tllcvideoSvgOverlay>
-          <div class="translationllc__video__container__overlay--intro">
-            <div class="translationllc__video__container__overlay__first-block">
-              <h1>WE</h1>
-              <h1>ARE</h1>
-            </div>
-            <div class="translationllc__video__container__overlay__second-block">
-              <h1>CULTURAL</h1>
-              <h1>CATALYSTS</h1>
-            </div>
+      <tllcvideoSvgOverlay>
+        <div class="translationllc__video__container__overlay--intro">
+          <div class="translationllc__video__container__overlay__first-block">
+            <h1>WE</h1>
+            <h1>ARE</h1>
           </div>
-        </tllcvideoSvgOverlay>
+          <div class="translationllc__video__container__overlay__second-block">
+            <h1>CULTURAL</h1>
+            <h1>CATALYSTS</h1>
+          </div>
+        </div>
+      </tllcvideoSvgOverlay>
+    </figure>
+    <div class="translationllc__section-icon preserveAspectRatio">
+     <p class="translationllc__section-icon__copy">
+       Believing that culture can propel brands forward in ways that advertising alone could never do,
+       we set out to build a company uniquely suited for today's world.
+       Yes, we create ads in every shape and form.
+       But we also create full-length films, one of the biggest music festivals in America, TV shows that we sell to networks,
+       a line of Air Jordans inspired by a fictitious insurance agent, and far more.
+     </p>
+    </div>
+    <tllcvideo style="border: 1px solid red" class="translationllc__work-video preserveAspectRatio" id="featureVideo">
+      <figure class="translationllc__video__container--work-video preserveAspectRatio">
+        <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" id="workVideoTwo">
+        </video>
       </figure>
+      <button class="translationllc__video__play-button" id="workVideoTwo" type="button" name="button">
+      </button>
+    </tllcvideo>
       <!-- <button class="translationllc__video__play-button" id="featuredVideo" type="button" name="button">
       </button> -->
-    </tllcvideo>
+
     <!-- <div id="stoutismIntroTwo" class="gradientParallax preserveAspectRatio">
       <img src="../assets/GRADIENT[1].jpg" class="translationllc__stoutism" />
       <div class="translationllc__main__intro__stoutism__words-two translationllc__stoutism-words">
         <p class="translationllc__stoutism-attribution">- Lead, don't follow. Stay five steps ahead.</p>
       </div>
     </div> -->
-    <div class="translationllc__main__articles">
-      <div class="translationllc__main__articles__article--news">
-        <h3 class="translationllc__main__articles__news">NEWS</h3>
-      </div>
-      <div class="translationllc__main__articles__article">
-        <h5 class="translationllc__main__articles__article-publication">BERKELEY NEWS</h5>
-        <div class="translationllc__main__articles__article-title-author-container">
-          <a class="translationllc__main__articles__article-link" href="http://news.berkeley.edu/2017/05/19/dj-khaled-surprises-statistics-graduation/">Steve Stoute Addresses Berkeley and Surprises Graduates with DJ Khaled</a>
-          <p class="translationllc__main__articles__article-author">BY: PUBLIC AFFAIRS, UC BERKELEY</p>
-        </div>
-      </div>
-      <div class="translationllc__main__articles__article">
-        <h5 class="translationllc__main__articles__article-publication">ADWEEK</h5>
-        <div class="translationllc__main__articles__article-title-author-container">
-          <a class="translationllc__main__articles__article-link" href="http://www.adweek.com/agencyspy/shaq-translation-hype-the-nba-playoffs-as-larger-than-life/130481">Shaq, Translation Hype the NBA Playoffs as Larger Than Life</a>
-          <p class="translationllc__main__articles__article-author">BY: ERIK OSTER</p>
-        </div>
-      </div>
-      <hr class="translationllc__news-hr">
-      <div class="translationllc__main__articles__article">
-        <h5 class="translationllc__main__articles__article-publication">CAMPAIGN</h5>
-        <div class="translationllc__main__articles__article-title-author-container">
-          <a class="translationllc__main__articles__article-link" href="http://www.campaignlive.com/article/career-5-executions-translations-john-norman/1430517">My Career in 5 Executions: Translation’s John Norman</a>
-          <p class="translationllc__main__articles__article-author">BY: I-HSIEN SHERWOOD</p>
-        </div>
-      </div>
-      <hr class="translationllc__news-hr">
-      <div class="translationllc__main__articles__article">
-        <h5 class="translationllc__main__articles__article-publication">FAST CO.</h5>
-        <div class="translationllc__main__articles__article-title-author-container">
-          <a  class="translationllc__main__articles__article-link" href="https://www.fastcompany.com/40405973/the-nba-playoffs-are-here-and-heres-how-stephen-curry-trains-his-mi">The NBA Playoffs are Here, and Here’s How Steph Curry Trains His Mind</a>
-          <p class="translationllc__main__articles__article-author">BY: JEFF BEER</p>
-        </div>
-      </div>
-      <div class="translationllc__main__articles__article">
-        <h5 class="translationllc__main__articles__article-publication">BRAND CHANNEL</h5>
-        <div class="translationllc__main__articles__article-title-author-container">
-          <a  class="translationllc__main__articles__article-link" href="http://brandchannel.com/2017/04/10/la-la-land-vcf-041017/">Tapping La La Land’s Choreographer, VCF is “Made to Mix”</a>
-          <p class="translationllc__main__articles__article-author">BY: ABE SAUER</p>
-        </div>
-      </div>
-    </div>
     <!-- <div id="stoutismWork" class="gradientParallax preserveAspectRatio">
       <img src="../assets/Translation_MobileSite_1334x750_Gradient_3.png" class="translationllc__stoutism" />
       <div class="translationllc__main__work__stoutism__words translationllc__stoutism-words">
@@ -99,13 +73,6 @@
   <section id="workSection" class="translationllc__main__work">
     <div class="translationllc__main__culture__section-icon translationllc__section-icon preserveAspectRatio">
       <img class="translationllc__section-icon__svg translationllc__section-icon__words" src="../assets/work_graphic.svg" alt="">
-    </div>
-    <!-- <div class="translationllc__main__work__section-icon translationllc__section-icon">
-    </div> -->
-    <div class="translationllc__main__work__work-mission preserveAspectRatio">
-      <div class="translationllc__main__culture__emcee__opacity-layer">
-      </div>
-      <img class="translationllc__section-icon__words translationllc__section-icon__words--work-that-works" src="../assets/WorkThatActuallyWorks.svg" alt="">
     </div>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="workVideoOne">
       <figure class="translationllc__video__container--work-video translationllc__video__container--work-video--one preserveAspectRatio">
@@ -240,26 +207,91 @@
       </div>
     </div> -->
   </section>
+  <section id="newsSection">
+    <div class="translationllc__main__articles">
+      <div class="translationllc__main__articles__article--news">
+        <h3 class="translationllc__main__articles__news">NEWS</h3>
+      </div>
+      <div class="translationllc__main__articles__article">
+        <h5 class="translationllc__main__articles__article-publication">BERKELEY NEWS</h5>
+        <div class="translationllc__main__articles__article-title-author-container">
+          <a class="translationllc__main__articles__article-link" href="http://news.berkeley.edu/2017/05/19/dj-khaled-surprises-statistics-graduation/">Steve Stoute Addresses Berkeley and Surprises Graduates with DJ Khaled</a>
+          <p class="translationllc__main__articles__article-author">BY: PUBLIC AFFAIRS, UC BERKELEY</p>
+        </div>
+      </div>
+      <div class="translationllc__main__articles__article">
+        <h5 class="translationllc__main__articles__article-publication">ADWEEK</h5>
+        <div class="translationllc__main__articles__article-title-author-container">
+          <a class="translationllc__main__articles__article-link" href="http://www.adweek.com/agencyspy/shaq-translation-hype-the-nba-playoffs-as-larger-than-life/130481">Shaq, Translation Hype the NBA Playoffs as Larger Than Life</a>
+          <p class="translationllc__main__articles__article-author">BY: ERIK OSTER</p>
+        </div>
+      </div>
+      <hr class="translationllc__news-hr">
+      <div class="translationllc__main__articles__article">
+        <h5 class="translationllc__main__articles__article-publication">CAMPAIGN</h5>
+        <div class="translationllc__main__articles__article-title-author-container">
+          <a class="translationllc__main__articles__article-link" href="http://www.campaignlive.com/article/career-5-executions-translations-john-norman/1430517">My Career in 5 Executions: Translation’s John Norman</a>
+          <p class="translationllc__main__articles__article-author">BY: I-HSIEN SHERWOOD</p>
+        </div>
+      </div>
+      <hr class="translationllc__news-hr">
+      <div class="translationllc__main__articles__article">
+        <h5 class="translationllc__main__articles__article-publication">FAST CO.</h5>
+        <div class="translationllc__main__articles__article-title-author-container">
+          <a  class="translationllc__main__articles__article-link" href="https://www.fastcompany.com/40405973/the-nba-playoffs-are-here-and-heres-how-stephen-curry-trains-his-mi">The NBA Playoffs are Here, and Here’s How Steph Curry Trains His Mind</a>
+          <p class="translationllc__main__articles__article-author">BY: JEFF BEER</p>
+        </div>
+      </div>
+      <div class="translationllc__main__articles__article">
+        <h5 class="translationllc__main__articles__article-publication">BRAND CHANNEL</h5>
+        <div class="translationllc__main__articles__article-title-author-container">
+          <a  class="translationllc__main__articles__article-link" href="http://brandchannel.com/2017/04/10/la-la-land-vcf-041017/">Tapping La La Land’s Choreographer, VCF is “Made to Mix”</a>
+          <p class="translationllc__main__articles__article-author">BY: ABE SAUER</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <section id="cultureSection">
     <div class="translationllc__main__culture__section-icon translationllc__section-icon preserveAspectRatio">
-      <img class="translationllc__section-icon__words translationllc__section-icon__words--culture" src="../assets/culture.svg" alt="">
+      <div class="translationllc__main__culture__section-icon__copy-container">
+        <img class="translationllc__section-icon__words--container" src="../assets/culture.svg" alt="">
+        <p class="translationllc__section-icon__copy--container">
+          Believing that culture can propel brands forward in ways that advertising alone could never do,
+          we set out to build a company uniquely suited for today's world.
+          Yes, we create ads in every shape and form.
+          But we also create full-length films, one of the biggest music festivals in America, TV shows that we sell to networks,
+          a line of Air Jordans inspired by a fictitious insurance agent, and far more.
+        </p>
+      </div>
     </div>
-    <div class="translationllc__main__culture__culture-mission translationllc__section-icon preserveAspectRatio">
-      <img class="translationllc__main__culture__culture-mission__svg" src="../assets/OurCultureMovesCulture.svg" alt="">
+    <tllcvideo class="translationllc__work-video preserveAspectRatio" id="biggiebreakfast">
+      <figure class="translationllc__video__container--work-video translationllc__video__container--work-video--eight preserveAspectRatio">
+        <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" id="biggiebreakfast">
+        </video>
+      </figure>
+      <button class="translationllc__video__play-button" id="biggiebreakfast" type="button" name="button">
+      </button>
+    </tllcvideo>
+    <div class="translation__main__video-text-content">
+      <h3 class="translation__main__video-text-content__header">BIGGIE BREAKFAST</h3>
+      <p class="translation__main__video-text-content__content">
+        This will be a write up of biggie breakfast. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
     </div>
-    <div id="majorsMinors" class="translationllc__section-icon translationllc__section-icon--words-only preserveAspectRatio">
-      <img class="translationllc__section-icon__words translationllc__section-icon__words--majors-minors" src="../assets/MajorsMinors.svg" alt="">
+    <div id="majorsMinors" class="translationllc__section-icon translationllc__section-icon preserveAspectRatio">
+      <div class="translationllc__main__culture__section-icon__copy-container--majors-minors">
+        <img class="translationllc__section-icon__words--container" src="../assets/MajorsMinors.svg" alt="">
+        <p class="translationllc__section-icon__copy--container">
+          At Translation, our out-of-office passions are just as important as the titles
+          on our business cards. We are collectors, historians, and makers.
+          We allow our expert fluency across different pockets of culture to
+          spill into the boardroom and elevate the work whenever it makes sense.
+        </p>
+      </div>
     </div>
     <div id="minorsCarousel" class="preserveAspectRatio translationllc__main__culture__emcee">
       <div class="translationllc__main__culture__emcee__opacity-layer">
       </div>
-    </div>
-    <div class="translationllc__section-icon preserveAspectRatio">
-      <p class="translationllc__section-icon__copy">
-        At Translation, our out-of-office passions are just as important as the titles on our business cards.
-        We are collectors, historians, and makers. Our people have obsessive personalities that conveniently
-        spill over into the boardroom.
-      </p>
     </div>
     <!-- <div id="stoutismCulture" class="gradientParallax preserveAspectRatio">
       <img src="../assets/Translation_MobileSite_1334x750_Gradient_4.png" class="translationllc__stoutism" />
@@ -300,6 +332,6 @@
     </div>
     <p class="translationllc__contact-us__copyright">Ⓒ2017 Translation. All Rights Reserved.</p>
   </section>
-  <button style="display: none" id="requestFullscreenButton" type="button" name="button">Request full screen</button>
+  <button style="display: none" id="requestFullscreenButton" type="button" name="button"></button>
 </main>
 {{> homepageScripts}}
