--- a/templates/partials/header.handlebars
+++ b/templates/partials/header.handlebars
@@ -3,10 +3,10 @@
   <div id="introSectionNav" class="translationllc__header__translation-logo">
   </div>
 
-
   <nav  class="translationllc__nav">
-    <a class="translationllc__nav__work" href="#workSection">Work</a>
-    <a class="translationllc__nav__culture" href="#cultureSection">Culture</a>
+    <a href="#workSection">Work</a>
+    <a href="#cultureSection">Culture</a>
+    <a href="#newsSection">News</a>
     <!-- <a class="translationllc__nav__united-masters" href="#unitedMastersSection">United Masters</a> -->
   </nav>
 </header>
