--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -22,8 +22,6 @@
       </div>
     </div>
     <figure class="translationllc__video__container--intro preserveAspectRatio">
-        <!-- <video preload="none" type="video/mp4" class="translationllc__video__container__videointro preserveAspectRatio" id="featuredVideo" src="http://www.translationllc.com/assets/films/our-reel.mp4">
-        </video> -->
       <tllcvideoSvgOverlay>
         <div class="translationllc__video__container__overlay--intro">
           <div class="translationllc__video__container__overlay__first-block">
@@ -37,8 +35,8 @@
         </div>
       </tllcvideoSvgOverlay>
     </figure>
-    <div class="translationllc__section-icon preserveAspectRatio">
-     <p class="translationllc__section-icon__copy">
+    <div class="translationllc__section-icon">
+     <p class="">
        Believing that culture can propel brands forward in ways that advertising alone could never do,
        we set out to build a company uniquely suited for today's world.
        Yes, we create ads in every shape and form.
@@ -46,34 +44,18 @@
        a line of Air Jordans inspired by a fictitious insurance agent, and far more.
      </p>
     </div>
-    <tllcvideo style="border: 1px solid red" class="translationllc__work-video preserveAspectRatio" id="featureVideo">
-      <figure class="translationllc__video__container--work-video preserveAspectRatio">
-        <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" id="workVideoTwo">
-        </video>
-      </figure>
-      <button class="translationllc__video__play-button" id="workVideoTwo" type="button" name="button">
-      </button>
-    </tllcvideo>
-      <!-- <button class="translationllc__video__play-button" id="featuredVideo" type="button" name="button">
-      </button> -->
-
-    <!-- <div id="stoutismIntroTwo" class="gradientParallax preserveAspectRatio">
-      <img src="../assets/GRADIENT[1].jpg" class="translationllc__stoutism" />
-      <div class="translationllc__main__intro__stoutism__words-two translationllc__stoutism-words">
-        <p class="translationllc__stoutism-attribution">- Lead, don't follow. Stay five steps ahead.</p>
-      </div>
-    </div> -->
-    <!-- <div id="stoutismWork" class="gradientParallax preserveAspectRatio">
-      <img src="../assets/Translation_MobileSite_1334x750_Gradient_3.png" class="translationllc__stoutism" />
-      <div class="translationllc__main__work__stoutism__words translationllc__stoutism-words">
-        <p class="translationllc__stoutism-attribution">- Nuf said.</p>
-      </div>
-    </div> -->
   </section>
   <section id="workSection" class="translationllc__main__work">
-    <div class="translationllc__main__culture__section-icon translationllc__section-icon preserveAspectRatio">
-      <img class="translationllc__section-icon__svg translationllc__section-icon__words" src="../assets/work_graphic.svg" alt="">
+    <div class=" translationllc__section-icon translationllc__section-icon--work preserveAspectRatio">
     </div>
+    <tllcvideo class="translationllc__work-video preserveAspectRatio" id="sizzleVideo">
+      <figure class="translationllc__video__container--work-video translationllc__video__container--feature-video preserveAspectRatio">
+        <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" src="http://www.translationllc.com/assets/films/translation_sizzle.mp4" id="sizzleVideo">
+        </video>
+      </figure>
+      <button class="translationllc__video__play-button" id="sizzleVideo" type="button" name="button">
+      </button>
+    </tllcvideo>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="workVideoOne">
       <figure class="translationllc__video__container--work-video translationllc__video__container--work-video--one preserveAspectRatio">
         <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" id="workVideoOne" src="http://www.translationllc.com/assets/films/KP.mp4">
@@ -200,18 +182,11 @@
         By building a Champs store inside former employee DJ Khaled’s home, this campaign breathed life into their tagline "We Know Game."
       </p>
     </div>
-    <!-- <div id="stoutismIntro" class="gradientParallax preserveAspectRatio">
-      <img src="../assets/Translation_MobileSite_1334x750_Gradient_1.png" class="translationllc__stoutism" />
-      <div class="translationllc__main__intro__stoutism__words translationllc__stoutism-words">
-        <p class="translationllc__stoutism-attribution">- Don't lose focus when making ground-breaking work.</p>
-      </div>
-    </div> -->
   </section>
   <section id="newsSection">
+    <div class="translationllc__section-icon translationllc__section-icon--news preserveAspectRatio">
+    </div>
     <div class="translationllc__main__articles">
-      <div class="translationllc__main__articles__article--news">
-        <h3 class="translationllc__main__articles__news">NEWS</h3>
-      </div>
       <div class="translationllc__main__articles__article">
         <h5 class="translationllc__main__articles__article-publication">BERKELEY NEWS</h5>
         <div class="translationllc__main__articles__article-title-author-container">
@@ -252,62 +227,57 @@
     </div>
   </section>
   <section id="cultureSection">
-    <div class="translationllc__main__culture__section-icon translationllc__section-icon preserveAspectRatio">
-      <div class="translationllc__main__culture__section-icon__copy-container">
-        <img class="translationllc__section-icon__words--container" src="../assets/culture.svg" alt="">
-        <p class="translationllc__section-icon__copy--container">
-          Believing that culture can propel brands forward in ways that advertising alone could never do,
-          we set out to build a company uniquely suited for today's world.
-          Yes, we create ads in every shape and form.
-          But we also create full-length films, one of the biggest music festivals in America, TV shows that we sell to networks,
-          a line of Air Jordans inspired by a fictitious insurance agent, and far more.
-        </p>
+    <div class="translationllc__section-icon--contains-copy translationllc__section-icon">
+      <div class="translationllc__section-icon--culture">
       </div>
+      <p class="translationllc__section-icon__copy--container">
+        We believe brands that are brave enough to lead culture will always be more successful than brands chasing to follow it.
+        At Translation, we help ambitious brands thrive in contemporary culture, because we live in it and invite our partners to innovate within it.
+      </p>
     </div>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="biggiebreakfast">
-      <figure class="translationllc__video__container--work-video translationllc__video__container--work-video--eight preserveAspectRatio">
-        <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" id="biggiebreakfast">
+      <figure class="translationllc__video__container--work-video translationllc__video__container--biggiebreakfast preserveAspectRatio">
+        <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" id="biggiebreakfast" src="http://www.translationllc.com/assets/films/BIGGIEBREAKFAST.mp4">
         </video>
       </figure>
       <button class="translationllc__video__play-button" id="biggiebreakfast" type="button" name="button">
       </button>
     </tllcvideo>
     <div class="translation__main__video-text-content">
-      <h3 class="translation__main__video-text-content__header">BIGGIE BREAKFAST</h3>
+      <h3 class="translation__main__video-text-content__header">A BIG Way to Spread Love in Brooklyn</h3>
       <p class="translation__main__video-text-content__content">
-        This will be a write up of biggie breakfast. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        To celebrate Biggie’s life and legacy, on March 9, 2016 we took to his hometown of Bed-Stuy, Brooklyn, to feed the needy with a special, signature dish.
       </p>
     </div>
-    <div id="majorsMinors" class="translationllc__section-icon translationllc__section-icon preserveAspectRatio">
-      <div class="translationllc__main__culture__section-icon__copy-container--majors-minors">
-        <img class="translationllc__section-icon__words--container" src="../assets/MajorsMinors.svg" alt="">
-        <p class="translationllc__section-icon__copy--container">
-          At Translation, our out-of-office passions are just as important as the titles
-          on our business cards. We are collectors, historians, and makers.
-          We allow our expert fluency across different pockets of culture to
-          spill into the boardroom and elevate the work whenever it makes sense.
-        </p>
+    <div class="translationllc__section-icon--contains-copy translationllc__section-icon">
+      <div class="translationllc__section-icon--majors-minors">
       </div>
+      <p class="translationllc__section-icon__copy--container">
+        At Translation, our out-of-office passions are just as important as the titles
+        on our business cards. We are collectors, historians, and makers.
+        We allow our expert fluency across different pockets of culture to
+        spill into the boardroom and elevate the work whenever it makes sense.
+      </p>
     </div>
     <div id="minorsCarousel" class="preserveAspectRatio translationllc__main__culture__emcee">
       <div class="translationllc__main__culture__emcee__opacity-layer">
       </div>
     </div>
-    <!-- <div id="stoutismCulture" class="gradientParallax preserveAspectRatio">
-      <img src="../assets/Translation_MobileSite_1334x750_Gradient_4.png" class="translationllc__stoutism" />
-      <div class="translationllc__main__culture__stoutism__words translationllc__stoutism-words translationllc__stoutism-words--tall-quote">
-        <p class="translationllc__stoutism-attribution translationllc__stoutism-attribution--tall-quote">- This old proverb from Zimbabwe reminds us to never settle. Let’s raise the bar together.</p>
-      </div>
-    </div> -->
   </section>
   <section class="translationllc__contact-us" id="contactUs">
     <h2 class="translationllc__contact-us__header">STAY IN TOUCH</h2>
     <div class="translationllc__contact-us__two-column-container">
       <div class="translationllc__contact-us__two-column-container__column">
         <div class="translationllc__contact-us__container">
+          <p>NYC</p>
           <p>145 West 45th Street</p>
           <p>12th Floor</p>
           <p>New York, NY 10036</p>
+        </div>
+        <div class="translationllc__contact-us__container">
+          <p>SF</p>
+          <p>2360 3rd Street</p>
+          <p>San Francisco, CA 94107</p>
         </div>
         <div class="translationllc__contact-us__container">
           <a href="tel:1-212-299-5505">212.299.5505</a>
