--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -36,12 +36,10 @@
       </tllcvideoSvgOverlay>
     </figure>
     <div class="translationllc__section-icon">
-     <p class="">
-       Believing that culture can propel brands forward in ways that advertising alone could never do,
-       we set out to build a company uniquely suited for today's world.
-       Yes, we create ads in every shape and form.
-       But we also create full-length films, one of the biggest music festivals in America, TV shows that we sell to networks,
-       a line of Air Jordans inspired by a fictitious insurance agent, and far more.
+     <p class="translationllc__section-icon__copy--container translationllc__section-icon__copy--container--intro">
+       Believing that culture can propel brands forward in ways that advertising alone can never do, we set out to build a company uniquely suited to today's world.
+       Yes, we create ads in every shape and form. But we also create full-length films, one of the biggest music festivals in America, TV shows that we sell to networks, a line of Air Jordans inspired by a fictitious insurance agent, and far more.
+       We invite you to scroll down and explore the many facets of who we are, and the many ways in which we help brands thrive in contemporary culture.
      </p>
     </div>
   </section>
@@ -56,6 +54,12 @@
       <button class="translationllc__video__play-button" id="sizzleVideo" type="button" name="button">
       </button>
     </tllcvideo>
+    <div class="translation__main__video-text-content">
+      <h3 class="translation__main__video-text-content__header">FEATURE VIDEO</h3>
+      <p class="translation__main__video-text-content__content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="workVideoOne">
       <figure class="translationllc__video__container--work-video translationllc__video__container--work-video--one preserveAspectRatio">
         <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" id="workVideoOne" src="http://www.translationllc.com/assets/films/KP.mp4">
@@ -194,13 +198,6 @@
           <p class="translationllc__main__articles__article-author">BY: PUBLIC AFFAIRS, UC BERKELEY</p>
         </div>
       </div>
-      <div class="translationllc__main__articles__article">
-        <h5 class="translationllc__main__articles__article-publication">ADWEEK</h5>
-        <div class="translationllc__main__articles__article-title-author-container">
-          <a class="translationllc__main__articles__article-link" href="http://www.adweek.com/agencyspy/shaq-translation-hype-the-nba-playoffs-as-larger-than-life/130481">Shaq, Translation Hype the NBA Playoffs as Larger Than Life</a>
-          <p class="translationllc__main__articles__article-author">BY: ERIK OSTER</p>
-        </div>
-      </div>
       <hr class="translationllc__news-hr">
       <div class="translationllc__main__articles__article">
         <h5 class="translationllc__main__articles__article-publication">CAMPAIGN</h5>
@@ -244,7 +241,7 @@
       </button>
     </tllcvideo>
     <div class="translation__main__video-text-content">
-      <h3 class="translation__main__video-text-content__header">A BIG Way to Spread Love in Brooklyn</h3>
+      <h3 class="translation__main__video-text-content__header">A BIG WAY TO SPREAD LOVE IN BROOKLYN</h3>
       <p class="translation__main__video-text-content__content">
         To celebrate Biggie’s life and legacy, on March 9, 2016 we took to his hometown of Bed-Stuy, Brooklyn, to feed the needy with a special, signature dish.
       </p>
@@ -253,10 +250,7 @@
       <div class="translationllc__section-icon--majors-minors">
       </div>
       <p class="translationllc__section-icon__copy--container">
-        At Translation, our out-of-office passions are just as important as the titles
-        on our business cards. We are collectors, historians, and makers.
-        We allow our expert fluency across different pockets of culture to
-        spill into the boardroom and elevate the work whenever it makes sense.
+        At Translation, our personal passions are just as important as the titles on our business cards. We are creators, collectors, historians, and more. And in everything we do, we allow our expert fluency across different pockets of culture to spill into the boardroom and elevate the work.
       </p>
     </div>
     <div id="minorsCarousel" class="preserveAspectRatio translationllc__main__culture__emcee">
