--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -225,7 +225,7 @@
   </section>
   <section id="cultureSection">
     <div class="translationllc__section-icon--contains-copy translationllc__section-icon">
-      <div class="translationllc__section-icon--culture">
+      <div class="translationllc__section-icon--culture preserveAspectRatio">
       </div>
       <p class="translationllc__section-icon__copy--container">
         We believe brands that are brave enough to lead culture will always be more successful than brands chasing to follow it.
