changed path to champs video

--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -174,7 +174,7 @@
     </div>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="workVideoEight">
       <figure class="translationllc__video__container--work-video translationllc__video__container--work-video--eight preserveAspectRatio">
-        <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" id="workVideoEight" src="http://www.translationllc.com/assets/films/CHAMPS.mp4">
+        <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" id="workVideoEight" src="http://www.translationllc.com/assets/films/CHAMPSv2.mp4">
         </video>
       </figure>
       <button class="translationllc__video__play-button" id="workVideoEight" type="button" name="button">
