--- a/templates/partials/homepage.handlebars
+++ b/templates/partials/homepage.handlebars
@@ -48,16 +48,16 @@
     </div>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="sizzleVideo">
       <figure class="translationllc__video__container--work-video translationllc__video__container--feature-video preserveAspectRatio">
-        <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" src="http://www.translationllc.com/assets/films/translation_sizzle.mp4" id="sizzleVideo">
+        <video preload="none" type="video/mp4" class="translationllc__video__container__video--work-video videoPreserveAspectRatio" src="http://www.translationllc.com/assets/films/SIZZLE.mp4" id="sizzleVideo">
         </video>
       </figure>
       <button class="translationllc__video__play-button" id="sizzleVideo" type="button" name="button">
       </button>
     </tllcvideo>
     <div class="translation__main__video-text-content">
-      <h3 class="translation__main__video-text-content__header">FEATURE VIDEO</h3>
+      <h3 class="translation__main__video-text-content__header">GREATEST HITS</h3>
       <p class="translation__main__video-text-content__content">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Whether it’s creating an alter-ego for an NBA All-Star, a music festival for the new America, or giving the king of Snapchat his very own store, our work drives our partners conversations.
       </p>
     </div>
     <tllcvideo class="translationllc__work-video preserveAspectRatio" id="workVideoOne">
@@ -269,12 +269,12 @@
           <p>New York, NY 10036</p>
         </div>
         <div class="translationllc__contact-us__container">
+          <a href="tel:1-212-299-5505">212.299.5505</a>
+        </div>
+        <div class="translationllc__contact-us__container">
           <p>SF</p>
           <p>2360 3rd Street</p>
           <p>San Francisco, CA 94107</p>
-        </div>
-        <div class="translationllc__contact-us__container">
-          <a href="tel:1-212-299-5505">212.299.5505</a>
         </div>
       </div>
       <div class="">
